--- a/package.json
+++ b/package.json
@@ -3,15 +3,24 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@ant-design/icons": "^4.6.4",
+    "@craco/craco": "^6.3.0",
     "@types/react": "^17.0.17",
     "@types/react-dom": "^17.0.9",
+    "antd": "^4.16.11",
+    "compose-function": "^3.0.3",
     "cra-template-typescript": "1.1.2",
     "eslint-config-react-app": "^6.0.0",
     "eslint-plugin-flowtype": "^5.9.0",
     "eslint-plugin-testing-library": "^4.10.1",
+    "mobx-react-lite": "^3.2.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-router": "^5.2.1",
+    "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
+    "sass": "^1.39.2",
+    "styled-components": "^5.3.1",
     "typescript": "^4.3.5",
     "web-vitals": "^2.1.0"
   },
@@ -42,6 +51,10 @@
     ]
   },
   "devDependencies": {
+    "@types/compose-function": "^0.0.30",
+    "@types/react-router": "^5.1.16",
+    "@types/react-router-dom": "^5.1.8",
+    "@types/styled-components": "^5.1.14",
     "@typescript-eslint/eslint-plugin": "^4.29.1",
     "@typescript-eslint/parser": "^4.29.1",
     "eslint": "7.11.0",
