--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@types/react": "^17.0.17",
     "@types/react-dom": "^17.0.9",
     "antd": "^4.16.11",
+    "axios": "^0.21.4",
     "compose-function": "^3.0.3",
     "cra-template-typescript": "1.1.2",
     "eslint-config-react-app": "^6.0.0",
