--- a/package.json
+++ b/package.json
@@ -8,8 +8,11 @@
     "@types/react": "^17.0.17",
     "@types/react-dom": "^17.0.9",
     "antd": "^4.16.11",
+    "axios": "^0.22.0",
     "compose-function": "^3.0.3",
     "cra-template-typescript": "1.1.2",
+    "effector": "^22.1.2",
+    "effector-react": "^22.0.4",
     "eslint-config-react-app": "^6.0.0",
     "eslint-plugin-flowtype": "^5.9.0",
     "eslint-plugin-testing-library": "^4.10.1",
