--- a/api.yaml
+++ b/api.yaml
@@ -81,17 +81,17 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/ApiError"
-  /construction-materials:
+  /items:
     post:
       tags:
-        - ConstructionMaterials
-      summary: Create construction materials
-      operationId: create-construction-materials
+        - Items
+      summary: Create item
+      operationId: create-item
       requestBody:
         content:
           application/json:
             schema:
-              $ref: "#/components/schemas/CreateConstructionMaterialDto"
+              $ref: "#/components/schemas/CreateItemDto"
         required: true
       responses:
         200:
@@ -99,7 +99,33 @@ paths:
           content:
             application/json:
               schema:
-                $ref: "#/components/schemas/ConstructionMaterialDto"
+                $ref: "#/components/schemas/ItemDto"
+        "400":
+          description: Bad Request
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/ApiError"
+    put:
+      tags:
+        - Items
+      summary: Update item
+      operationId: update-item
+      security:
+        - bearerAuth: [ ]
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: "#/components/schemas/UpdateItemDto"
+        required: true
+      responses:
+        200:
+          description: successful operation
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/ItemDto"
         "400":
           description: Bad Request
           content:
@@ -108,15 +134,9 @@ paths:
                 $ref: "#/components/schemas/ApiError"
     get:
       tags:
-        - ConstructionMaterials
-      summary: Get construction materials
-      operationId: get-construction-materials
-      requestBody:
-        content:
-          application/json:
-            schema:
-              $ref: "#/components/schemas/CreateConstructionMaterialDto"
-        required: true
+        - Items
+      summary: Get items
+      operationId: get-items
       parameters:
         - name: offset
           in: query
@@ -138,7 +158,7 @@ paths:
           content:
             application/json:
               schema:
-                $ref: "#/components/schemas/PageConstructionMaterialDto"
+                $ref: "#/components/schemas/PageItemDto"
         "400":
           description: Bad Request
           content:
@@ -432,12 +452,12 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/ApiError"
-  /admin/construction-materials:
+  /admin/items:
     get:
       tags:
-        - AdminConstructionMaterials
-      summary: admin get construction materials
-      operationId: admin-get-construction-materials
+        - AdminItems
+      summary: admin get items
+      operationId: admin-get-items
       security:
         - bearerAuth: []
       parameters:
@@ -457,11 +477,11 @@ paths:
             default: 0
       responses:
         "200":
-          description: List of faq items
+          description: List of items
           content:
             application/json:
               schema:
-                $ref: "#/components/schemas/PageConstructionMaterialDto"
+                $ref: "#/components/schemas/PageItemDto"
         "400":
           description: Bad Request
           content:
@@ -470,16 +490,16 @@ paths:
                 $ref: "#/components/schemas/ApiError"
     post:
       tags:
-        - AdminConstructionMaterials
-      summary: Admin create construction materials
-      operationId: admin-create-construction-materials
+        - AdminItems
+      summary: Admin create items
+      operationId: admin-create-item
       security:
         - bearerAuth: [ ]
       requestBody:
         content:
           application/json:
             schema:
-              $ref: "#/components/schemas/CreateConstructionMaterialDto"
+              $ref: "#/components/schemas/CreateItemDto"
         required: true
       responses:
         200:
@@ -487,7 +507,7 @@ paths:
           content:
             application/json:
               schema:
-                $ref: "#/components/schemas/ConstructionMaterialDto"
+                $ref: "#/components/schemas/ItemDto"
         "400":
           description: Bad Request
           content:
@@ -496,16 +516,16 @@ paths:
                 $ref: "#/components/schemas/ApiError"
     put:
       tags:
-        - AdminConstructionMaterials
-      summary: Admin update construction material
-      operationId: admin-update-construction-material
+        - AdminItems
+      summary: Admin update item
+      operationId: admin-update-item
       security:
         - bearerAuth: [ ]
       requestBody:
         content:
           application/json:
             schema:
-              $ref: "#/components/schemas/UpdateConstructionMaterialDto"
+              $ref: "#/components/schemas/UpdateItemDto"
         required: true
       responses:
         200:
@@ -513,7 +533,7 @@ paths:
           content:
             application/json:
               schema:
-                $ref: "#/components/schemas/ConstructionMaterialDto"
+                $ref: "#/components/schemas/ItemDto"
         "400":
           description: Bad Request
           content:
@@ -522,9 +542,9 @@ paths:
                 $ref: "#/components/schemas/ApiError"
     delete:
       tags:
-        - AdminConstructionMaterial
-      summary: Admin delete construction material
-      operationId: admin-delete-construction-material
+        - AdminItems
+      summary: Admin delete item
+      operationId: admin-delete-item
       security:
         - bearerAuth: [ ]
       parameters:
@@ -541,7 +561,7 @@ paths:
           content:
             application/json:
               schema:
-                $ref: "#/components/schemas/CategoryGroupDto"
+                $ref: "#/components/schemas/DeleteItemDto"
         "400":
           description: Bad Request
           content:
@@ -647,90 +667,25 @@ components:
         activate:
           type: boolean
     CreateConstructionMaterialDto:
+      allOf:
+        - $ref: "#/components/schemas/CreateItemDto"
       type: object
-      required:
-        - title
-        - address
-        - price
-        - cityId
-        - categoryId
-        - description
-      properties:
-        title:
-          type: string
-        address:
-          type: string
-        price:
-          type: integer
-        cityId:
-          type: integer
-        description:
-          type: string
-        categoryId:
-          type: integer
-          format: int64
     ConstructionMaterialDto:
+      allOf:
+        - $ref: "#/components/schemas/ItemDto"
+      type: object
+    DeleteItemDto:
       type: object
       required:
         - id
-        - title
-        - address
-        - price
-        - cityId
-        - categoryId
-        - author
-        - description
       properties:
         id:
-          type: integer
-          format: int64
-        title:
-          type: string
-        address:
-          type: string
-        price:
-          type: integer
-        cityId:
-          type: integer
-        description:
-          type: string
-        author:
-          type: integer
-          format: int64
-        categoryId:
           type: integer
           format: int64
     UpdateConstructionMaterialDto:
+      allOf:
+        - $ref: "#/components/schemas/UpdateItemDto"
       type: object
-      required:
-        - id
-        - title
-        - address
-        - price
-        - cityId
-        - categoryId
-        - author
-        - description
-      properties:
-        id:
-          type: integer
-          format: int64
-        title:
-          type: string
-        address:
-          type: string
-        price:
-          type: integer
-        cityId:
-          type: integer
-        description:
-          type: string
-        author:
-          type: integer
-          format: int64
-        categoryId:
-          type: integer
-          format: int64
     PageUserDto:
       type: object
       required:
@@ -743,7 +698,7 @@ components:
           type: array
           items:
             $ref: "#/components/schemas/UserDto"
-    PageConstructionMaterialDto:
+    PageItemDto:
       type: object
       required:
         - meta
@@ -754,7 +709,7 @@ components:
         items:
           type: array
           items:
-            $ref: "#/components/schemas/ConstructionMaterialDto"
+            $ref: "#/components/schemas/ItemDto"
     PaginationMetaDto:
       type: object
       required:
@@ -873,3 +828,119 @@ components:
         parent:
           type: integer
           format: int64
+    CreateItemDto:
+      type: object
+      description: parent object for create item(construction material etc)
+      required:
+        - title
+        - address
+        - price
+        - cityId
+        - categoryId
+        - description
+        - type
+      properties:
+        title:
+          type: string
+        address:
+          type: string
+        price:
+          type: integer
+        cityId:
+          type: integer
+        description:
+          type: string
+        categoryId:
+          type: integer
+          format: int64
+        type:
+          type: string
+          description: Discriminator
+          discriminator:
+            propertyName: type
+            mapping:
+              ConstructionMaterialDto: "#/components/schemas/CreateConstructionMaterialDto"
+      discriminator:
+        propertyName: item
+        mapping:
+          CONSTRUCTION_MATERIAL: "#/components/schemas/CreateConstructionMaterialDto"
+    UpdateItemDto:
+      type: object
+      description: parent object for update item(construction material etc)
+      required:
+        - id
+        - title
+        - address
+        - price
+        - cityId
+        - categoryId
+        - author
+        - description
+        - type
+      properties:
+        id:
+          type: integer
+          format: int64
+        title:
+          type: string
+        address:
+          type: string
+        price:
+          type: integer
+        cityId:
+          type: integer
+        description:
+          type: string
+        author:
+          type: integer
+          format: int64
+        categoryId:
+          type: integer
+          format: int64
+        type:
+          type: string
+          description: Discriminator
+      discriminator:
+        propertyName: type
+        mapping:
+          UpdateConstructionMaterialDto: "#/components/schemas/UpdateConstructionMaterialDto"
+    ItemDto:
+      description: parent object for item(construction material etc)
+      type: object
+      required:
+        - id
+        - title
+        - address
+        - price
+        - cityId
+        - categoryId
+        - author
+        - description
+        - type
+      properties:
+        id:
+          type: integer
+          format: int64
+        title:
+          type: string
+        address:
+          type: string
+        price:
+          type: integer
+        cityId:
+          type: integer
+        description:
+          type: string
+        author:
+          type: integer
+          format: int64
+        categoryId:
+          type: integer
+          format: int64
+        type:
+          type: string
+          description: Discriminator
+      discriminator:
+        propertyName: type
+        mapping:
+          ConstructionMaterialDto: "#/components/schemas/ConstructionMaterialDto"
