--- a/api.yaml
+++ b/api.yaml
@@ -3,7 +3,7 @@ info:
   title: OpenAPI definition
   version: v0
 servers:
-  - url: "http://localhost:8080"
+  - url: "https://baza-application.herokuapp.com/"
     description: Generated server url
 paths:
   /auth/login:
