--- a/package.json
+++ b/package.json
@@ -32,7 +32,10 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "format": "prettier --write src/**/*.ts{,x}",
-    "lint": "tsc --noEmit && eslint src/**/*.ts{,x}"
+    "lint": "tsc --noEmit && eslint src/**/*.ts{,x}",
+    "generate:api": "openapi-generator-cli generate -g typescript-axios -i ./api.yaml -o ./src/shared/openapi",
+    "prestart": "npm run generate:api",
+    "prebuild": "npm run generate:api"
   },
   "eslintConfig": {
     "extends": [
@@ -53,6 +56,7 @@
     ]
   },
   "devDependencies": {
+    "@openapitools/openapi-generator-cli": "^2.4.26",
     "@types/compose-function": "^0.0.30",
     "@types/react-router": "^5.1.16",
     "@types/react-router-dom": "^5.1.8",
