--- a/api.yaml
+++ b/api.yaml
@@ -3,7 +3,7 @@ info:
   title: OpenAPI definition
   version: v0
 servers:
-  - url: "http://localhost:8080"
+  - url: "https://baza-application.herokuapp.com/"
     description: Generated server url
 paths:
   /auth/login:
@@ -200,7 +200,7 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/ApiError"
-  /categories:
+  /categories-group:
     get:
       tags:
         - Categories group
@@ -234,6 +234,32 @@ paths:
               schema:
                 $ref: "#/components/schemas/ApiError"
   /admin/categories:
+    get:
+      tags:
+        - Categories
+      summary: Get categories
+      operationId: get-categories
+      security:
+        - bearerAuth: [ ]
+      parameters:
+        - name: name
+          in: query
+          description: Name of category
+          schema:
+            type: string
+      responses:
+        200:
+          description: successful operation
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/CategoriesDto"
+        "400":
+          description: Bad Request
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/ApiError"
     post:
       tags:
         - AdminCategory
@@ -374,39 +400,31 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/ApiError"
-  /admin/categories-group:
-    get:
+    delete:
       tags:
-        - AdminCategoryGroup
-      summary: admin get category group
-      operationId: admin-get-category-group
-      security:
-        - bearerAuth: []
-      parameters:
-        - name: parent
-          in: query
-          description: Parent id
-          schema:
-            type: integer
-            format: int64
-        - name: name
-          in: query
-          description: Search by name of category
-          schema:
-            type: string
+        - Users
+      summary: Delete user
+      operationId: delete-user
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: "#/components/schemas/UserDeleteDto"
+        required: true
       responses:
-        "200":
-          description: List of faq items
+        200:
+          description: successful operation
           content:
             application/json:
               schema:
-                $ref: "#/components/schemas/CategoriesGroupDto"
+                $ref: "#/components/schemas/UserDeleteDto"
         "400":
           description: Bad Request
           content:
             application/json:
               schema:
                 $ref: "#/components/schemas/ApiError"
+  /admin/categories-group:
     post:
       tags:
         - AdminCategoryGroup
@@ -819,6 +837,15 @@ components:
           type: array
           items:
             $ref: "#/components/schemas/CategoryGroupDto"
+    CategoriesDto:
+      type: object
+      required:
+        - items
+      properties:
+        items:
+          type: array
+          items:
+            $ref: "#/components/schemas/CategoryDto"
     CreateCategoryDto:
       type: object
       required:
@@ -861,6 +888,14 @@ components:
           type: integer
           format: int64
         parent:
+          type: integer
+          format: int64
+    UserDeleteDto:
+      type: object
+      required:
+        - id
+      properties:
+        id:
           type: integer
           format: int64
     CreateItemDto:
